--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,7 +51,7 @@
             "type": "node",
             "request": "launch",
             "program": "${workspaceFolder}/test/models.js",
-            "args": [ "onnx/candy.onnx", "pytorch/alexnet.ptl", "tflite/squeezenet.tflite" ],
+            "args": [ "tag:validation" ],
             "console": "integratedTerminal",
         },
         {
