Add array-bracket-spacing lint rule

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "sourceType": "module"
         },
         "rules": {
+            "array-bracket-spacing": "error",
             "array-callback-return": "error",
             "arrow-parens": "error",
             "brace-style": "error",
