Add eqeqeq lint rule

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
             "consistent-return": "error",
             "default-case": "error",
             "default-case-last": "error",
+            "eqeqeq": "error",
             "indent": [ "error", 4, { "SwitchCase": 1 } ],
             "keyword-spacing": "error",
             "no-array-constructor": "error",
