Add no-implicit-globals lint rule

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
             "no-invalid-this": "error",
             "no-iterator": "error",
             "no-implicit-coercion": "error",
+            "no-implicit-globals": "error",
             "no-import-assign": "error",
             "no-labels": "error",
             "no-lone-blocks": "error",
