--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
             "prefer-const": [ "error" ],
             "prefer-destructuring": [ "error", { "array": true } ],
             "prefer-template": "error",
+            "radix": "error",
             "require-atomic-updates": "error",
             "semi": [ "error", "always" ],
             "space-before-blocks": "error",
