Add no-useless-concat lint rule

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
             "no-unused-vars": "error",
             "no-use-before-define": "error",
             "no-useless-catch": "error",
+            "no-useless-concat": "error",
             "no-var": "error",
             "object-curly-spacing": [ "error", "always" ],
             "prefer-arrow-callback": "error",
