Add no-unused-labels lint rule

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
             "no-unmodified-loop-condition": "error",
             "no-unreachable-loop": "error",
             "no-unused-expressions": "error",
+            "no-unused-labels": "error",
             "no-unused-private-class-members": "error",
             "no-unused-vars": "error",
             "no-use-before-define": "error",
