Update publish.yml (Homebrew/homebrew-cask#169206)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -84,7 +84,7 @@ jobs:
           GITHUB_USER: ${{ secrets.PUBLISH_GITHUB_USER }}
         run: git push origin HEAD:release --force
 
-      - if: startsWith(matrix.os, 'macos')
+      - if: false # startsWith(matrix.os, 'macos')
         name: Publish cask
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
