Add space-infix-ops lint rule

--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
             "semi": [ "error", "always" ],
             "space-before-blocks": "error",
             "space-in-parens": "error",
+            "space-infix-ops": "error",
             "template-curly-spacing": "error",
             "yoda": "error"
         },
